test_suite/tests/ui/fail/invalid_attr_value_for_arg/invalid_arg_error.stderr
error: custom attribute panicked
 --> $DIR/invalid_arg_error.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: arg `error` must be a string literal
